<resources>
    <string name="app_name">Movie App</string>
    <string name="movie_name">Movie name</string>
    <string name="movie_info">Movie Info</string>
    <string name="release_date">Release Date: </string>
    <string name="date">date</string>
    <string name="rating">Rating:</string>
    <string name="rate">Rate</string>
    <string name="run_time">Run Time:</string>
    <string name="revenue">Revenue:</string>
    <string name="overview">Overview</string>
    <string name="tv_shows_most_popular">TV Shows | Most Popular</string>
    <string name="tv_name">TV Name</string>
    <string name="network">Network</string>
    <string name="started">Started</string>
    <string name="status">Status</string>
    <string name="read_more">Read More</string>
    <string name="read_less">Read Less</string>
    <string name="u2022">*</string>
    <string name="genre">Genre</string>
    <string name="website">Website</string>
    <string name="episodes">Episodes</string>
    <string name="title">Title</string>
</resources>